--- a/src/components/css/root.css
+++ b/src/components/css/root.css
@@ -21,7 +21,8 @@
 }
 
 /* Page headers */
-.chakra-heading.css-1dklj6k {
+.chakra-heading.css-1dklj6k,
+.chakra-heading.css-1xlc358 {
   margin-bottom: 10px !important;
 }
 
