--- a/src/components/css/footer.css
+++ b/src/components/css/footer.css
@@ -5,7 +5,7 @@
   color: #7d7d7d !important;
   width: 32px !important;
   height: 32px !important;
-  margin: 10px 0px 0px 10px !important;
+  margin: 10px 0px 0px 10px;
 }
 
 .linkedin-icon:hover {
