--- a/src/components/css/root.css
+++ b/src/components/css/root.css
@@ -1,9 +1,3 @@
-* {
-  margin: 0 !important;
-  padding: 0 !important;
-  box-sizing: border-box !important;
-}
-
 .root {
   height: 100vh;
   display: grid;
@@ -23,7 +17,7 @@
 /* Page headers */
 .chakra-heading.css-1dklj6k,
 .chakra-heading.css-1xlc358 {
-  margin-bottom: 10px !important;
+  margin-bottom: 10px;
 }
 
 /* Modal styles */
@@ -45,5 +39,5 @@
 
 /* This is for the amenities on create/edit property */
 .checkbox-label {
-  margin-left: 5px !important;
+  margin-left: 5px;
 }
