gave the project some styling

--- a/src/components/css/footer.css
+++ b/src/components/css/footer.css
@@ -2,7 +2,7 @@
 
 .github-icon,
 .linkedin-icon {
-  color: #7d7d7d !important;
+  color: #f2f2f2 !important;
   width: 32px !important;
   height: 32px !important;
   margin: 10px 0px 0px 10px;
