--- a/src/components/css/root.css
+++ b/src/components/css/root.css
@@ -12,12 +12,47 @@
     "footer footer footer footer footer";
   grid-column-gap: 0px;
   grid-row-gap: 0px;
+  background-color: #a7d3e0;
 }
 
 /* Page headers */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: #2a7cba;
+}
+
 .chakra-heading.css-1dklj6k,
 .chakra-heading.css-1xlc358 {
   margin-bottom: 10px;
+}
+
+/* Text */
+p {
+  color: #1e3a78;
+}
+
+/* Card styles */
+.chakra-card__body.css-1idwstw {
+  background-color: #e0f4f7;
+  border-radius: 0.375rem;
+}
+
+/* Buttons */
+.chakra-button.css-ez23ye {
+  background-color: #3182ce;
+  color: #ffffff;
+}
+.chakra-button.css-ez23ye:hover {
+  background-color: #2b6cb0;
+}
+
+/* Input styles */
+.chakra-input.css-168wxav {
+  color: #1e3a78;
 }
 
 /* Modal styles */
@@ -40,4 +75,8 @@
 /* This is for the amenities on create/edit property */
 .checkbox-label {
   margin-left: 5px;
+}
+
+hr {
+  border-color: #f2f2f2;
 }
