--- a/src/components/css/root.css
+++ b/src/components/css/root.css
@@ -15,8 +15,10 @@
   background-color: #a7d3e0;
 }
 
+/* Main section (Cards) */
 .css-p2urg6,
-.css-c6vwei {
+.css-c6vwei,
+.css-1rt4icb {
   margin-right: 2rem;
 }
 
@@ -48,11 +50,14 @@ p {
 
 /* Buttons */
 .chakra-button.css-ez23ye,
-.chakra-button.css-x9ig9b {
+.chakra-button.css-x9ig9b,
+.chakra-button.css-6fajlz {
   background-color: #3182ce;
   color: #ffffff;
 }
-.chakra-button.css-ez23ye:hover {
+.chakra-button.css-ez23ye:hover,
+.chakra-button.css-x9ig9b:hover,
+chakra-button.css-6fajlz:hover {
   background-color: #2b6cb0;
 }
 
