--- a/src/components/css/root.css
+++ b/src/components/css/root.css
@@ -69,6 +69,10 @@ p {
   color: #1e3a78;
 }
 
+input[type="range"] {
+  width: 100%;
+}
+
 /* Modal styles */
 .chakra-modal__content-container.css-1u2cvaz {
   display: flex;
